# Atlas

./: .gitignore  LICENSE  README.md  install.ps1  obs_config.example.json  open_dashboard.bat  pyproject.toml  requirements.txt  start_atlas.bat  uninstall.ps1
atlas/: __init__.py  __main__.py  config.py  logging_setup.py  security.py  server.py  units.py
atlas/agents/: __init__.py  archivist.py  archivist_tools.py  base.py  bus.py  coordinator.py  critic.py  critic_tools.py  exposure_plan.py  memory_tools.py  operator.py  operator_tools.py  oracle.py  oracle_tools.py  planner.py  planner_tools.py  relay_tools.py  session_workflow.py  state.py
atlas/api/: __init__.py  routes.py  schemas.py  ws.py
atlas/astronomy/: __init__.py  catalog.py  visibility.py
atlas/capture/: __init__.py  ingest.py  platesolve.py  quality.py  stack.py
atlas/db/: __init__.py  managers.py  models.py  seed.py  session.py
atlas/hardware/: __init__.py  astap.py  nina.py  phd2.py  power.py
atlas/notifications/: __init__.py  ntfy.py
atlas/safety/: __init__.py  preflight.py  shutdown.py  thresholds.py
atlas/science/: __init__.py  submission_engine.py
atlas/simulation/: __init__.py  fake_hardware.py
atlas/storage/: __init__.py  disk.py  retention.py
dashboard/: atlas_dashboard.py  index.html  requirements.txt
docs/: setup.md
installer/: atlas_dashboard_setup.iss  atlas_server_setup.iss  build.bat
scripts/: build_pdfs.py
server/: atlas_server.py  requirements.txt
voice/: atlas_agent.py  atlas_voice.py  setup.ps1  test_audio.py  test_notify.py  test_speak.py
(+40 files in other folders)
